--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ models/__pycache__/user_model.cpython-35.pyc
 *.pyc
 w
 moj_maly_main.py
+models/__pycache__/user_model.cpython-35.pyc
+do_poprawy.md
+csv
